add create category endpoint

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "start": "ts-node src/index.ts",
         "test": "jest --runInBand"
     },
-    "author": "Rakesh K <codersgyan@gmail.com>",
+    "author": "Tanjim",
     "license": "ISC",
     "devDependencies": {
         "@types/config": "^3.3.5",
@@ -37,8 +37,8 @@
         "prettier": "3.0.3",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.2.2"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3"
     },
     "lint-staged": {
         "*.ts": [
