--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/config": "^3.3.5",
+        "@types/cookie-parser": "^1.4.10",
         "@types/express": "^4.17.17",
         "@types/http-errors": "^2.0.1",
         "@types/jest": "^29.5.4",
@@ -48,12 +49,15 @@
     },
     "dependencies": {
         "config": "^4.1.1",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.18.2",
+        "express-jwt": "^8.5.1",
         "express-validator": "^7.0.1",
         "http-errors": "^2.0.0",
         "js-yaml": "^4.1.0",
+        "jwks-rsa": "^3.2.0",
         "mongoose": "^8.19.3",
         "uuid": "^9.0.1",
         "winston": "^3.10.0"
